# workshop-langgraph-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/langgraph_mcp/: 01_no_mcp_langgraph_agent.py  04_mcp_http_external_package.py  Containerfile  README.md  main.py
