[project]
name = "poetry-langgraph-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "DiegoLigtenberg",email = "diegoligtenberg@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mcp (>=1.13.1,<2.0.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-ollama (>=0.3.7,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-mcp-adapters (>=0.1.9,<0.2.0)",
    "rich (>=14.1.0,<15.0.0)",
    "ruff (>=0.12.12,<0.13.0)",
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastmcp (>=2.13.0.2,<3.0.0.0)",
    "uv (>=0.9.27,<0.10.0)",
]

[tool.poetry]
packages = [{include = "langgraph_mcp", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
